force-app/main/default/objects/Async_Request__c/Async_Request__c.object-meta.xml
<CustomObject>
    <label>Async Request</label>
    <nameField>
        <displayFormat>ASYN-{00000}</displayFormat>
        <label>Async Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>