force-app/main/default/objects/Async_Request__c/fields/Has_Processed__c.field-meta.xml
<CustomField>
    <fullName>Has_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Processed</label>
    <type>Checkbox</type>
</CustomField>