force-app/main/default/objects/Async_Request__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>