force-app/main/default/objects/Async_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Has_Processed__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>sObject_Name__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Job_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>